infrastructure/prometheus-k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus-cont
        image: prom/prometheus
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
        ports:
        - containerPort: 9090
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
      serviceAccountName: prometheus
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
spec:
  selector:
    app: prometheus
  ports:
  - name: promui
    nodePort: 30900
    protocol: TCP
    port: 9090
    targetPort: 9090
  type: NodePort
#kind: Service
#apiVersion: v1
#metadata:
#  name: prometheus-service
#spec:
#  selector:
#    app: prometheus
#  ports:
#  - port: 9090
#    targetPort: 9090
#  type: ClusterIP
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: prometheus-graph-ingress
#spec:
#  rules:
#  - host:
#    http:
#      paths:
#      - path: /graph
#        backend:
#          serviceName: prometheus-service
#          servicePort: 9090
